package grpc

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// SpotService implements the gRPC SpotService
type SpotService struct {
	// TODO: Add dependencies like repository interfaces
}

// NewSpotService creates a new SpotService instance
func NewSpotService() *SpotService {
	return &SpotService{}
}

// Temporary structs until protobuf generates them
type Coordinates struct {
	Latitude  float64
	Longitude float64
}

type Spot struct {
	ID            string
	Name          string
	NameI18n      map[string]string
	Coordinates   *Coordinates
	Category      string
	Address       string
	AddressI18n   map[string]string
	CountryCode   string
	AverageRating float64
	ReviewCount   int32
	CreatedAt     time.Time
	UpdatedAt     time.Time
}

type CreateSpotRequest struct {
	Name        string
	NameI18n    map[string]string
	Coordinates *Coordinates
	Category    string
	Address     string
	AddressI18n map[string]string
	CountryCode string
}

type CreateSpotResponse struct {
	Spot *Spot
}

type GetSpotRequest struct {
	ID string
}

type GetSpotResponse struct {
	Spot *Spot
}

type PaginationRequest struct {
	Page     int32
	PageSize int32
}

type PaginationResponse struct {
	TotalCount int32
	Page       int32
	PageSize   int32
	TotalPages int32
}

type ListSpotsRequest struct {
	Pagination  *PaginationRequest
	Center      *Coordinates
	RadiusKm    float64
	Category    string
	CountryCode string
}

type ListSpotsResponse struct {
	Spots      []*Spot
	Pagination *PaginationResponse
}

type SearchSpotsRequest struct {
	Query      string
	Language   string // Simplified language handling
	Center     *Coordinates
	RadiusKm   float64
	Pagination *PaginationRequest
}

type SearchSpotsResponse struct {
	Spots      []*Spot
	Pagination *PaginationResponse
}

// CreateSpot creates a new spot
func (s *SpotService) CreateSpot(ctx context.Context, req *CreateSpotRequest) (*CreateSpotResponse, error) {
	// Validate request
	if req.Name == "" {
		return nil, status.Error(codes.InvalidArgument, "name is required")
	}
	if req.Coordinates == nil {
		return nil, status.Error(codes.InvalidArgument, "coordinates are required")
	}

	// TODO: Implement actual business logic using domain services
	// For now, return dummy data
	spot := &Spot{
		ID:          fmt.Sprintf("spot_%d", time.Now().Unix()),
		Name:        req.Name,
		NameI18n:    req.NameI18n,
		Coordinates: req.Coordinates,
		Category:    req.Category,
		Address:     req.Address,
		AddressI18n: req.AddressI18n,
		CountryCode: req.CountryCode,
		CreatedAt:   time.Now(),
		UpdatedAt:   time.Now(),
	}

	return &CreateSpotResponse{Spot: spot}, nil
}

// GetSpot retrieves a spot by ID
func (s *SpotService) GetSpot(ctx context.Context, req *GetSpotRequest) (*GetSpotResponse, error) {
	if req.ID == "" {
		return nil, status.Error(codes.InvalidArgument, "id is required")
	}

	// TODO: Implement actual retrieval logic
	// For now, return dummy data
	spot := &Spot{
		ID:            req.ID,
		Name:          "Sample Spot",
		Coordinates:   &Coordinates{Latitude: 35.6762, Longitude: 139.6503},
		Category:      "cafe",
		Address:       "Tokyo, Japan",
		CountryCode:   "JP",
		AverageRating: 4.5,
		ReviewCount:   10,
		CreatedAt:     time.Now().Add(-24 * time.Hour),
		UpdatedAt:     time.Now(),
	}

	return &GetSpotResponse{Spot: spot}, nil
}

// ListSpots lists spots with optional filters
func (s *SpotService) ListSpots(ctx context.Context, req *ListSpotsRequest) (*ListSpotsResponse, error) {
	// TODO: Implement actual listing logic
	// For now, return dummy data
	spot := &Spot{
		ID:            "spot_1",
		Name:          "Sample Cafe",
		Coordinates:   &Coordinates{Latitude: 35.6762, Longitude: 139.6503},
		Category:      "cafe",
		AverageRating: 4.5,
		ReviewCount:   10,
		CreatedAt:     time.Now().Add(-24 * time.Hour),
		UpdatedAt:     time.Now(),
	}

	pagination := &PaginationResponse{
		TotalCount: 1,
		Page:       1,
		PageSize:   20,
		TotalPages: 1,
	}
	if req.Pagination != nil {
		pagination.Page = req.Pagination.Page
		pagination.PageSize = req.Pagination.PageSize
	}

	return &ListSpotsResponse{
		Spots:      []*Spot{spot},
		Pagination: pagination,
	}, nil
}

// SearchSpots searches spots by query
func (s *SpotService) SearchSpots(ctx context.Context, req *SearchSpotsRequest) (*SearchSpotsResponse, error) {
	if req.Query == "" {
		return nil, status.Error(codes.InvalidArgument, "query is required")
	}

	// TODO: Implement actual search logic
	// For now, return dummy data similar to ListSpots
	spot := &Spot{
		ID:            "spot_search_1",
		Name:          fmt.Sprintf("Search Result for: %s", req.Query),
		Coordinates:   &Coordinates{Latitude: 35.6762, Longitude: 139.6503},
		Category:      "cafe",
		AverageRating: 4.5,
		ReviewCount:   10,
		CreatedAt:     time.Now().Add(-24 * time.Hour),
		UpdatedAt:     time.Now(),
	}

	pagination := &PaginationResponse{
		TotalCount: 1,
		Page:       1,
		PageSize:   20,
		TotalPages: 1,
	}
	if req.Pagination != nil {
		pagination.Page = req.Pagination.Page
		pagination.PageSize = req.Pagination.PageSize
	}

	return &SearchSpotsResponse{
		Spots:      []*Spot{spot},
		Pagination: pagination,
	}, nil
}